--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,47 @@ h3 {
 	display: none;
 }
 
+.lightbox-display {
+	display: none;
+}
+
+.svg:hover path, .svg:hover, .svg:hover line{
+    stroke: #666666;
+}
+
+.lightbox-icons {
+	z-index: 100000000000;
+	position: fixed;
+}
+
+.clickable, .thumb-box {
+	cursor: pointer;
+}
+
+.arrows {
+	height: 50px;
+	width: 25px;
+}
+
+#left-arrow {
+	position: fixed;
+	left: 15px;
+}
+
+#right-arrow {
+	position: fixed;
+	right: 0;
+	right: 15px;
+}
+
+#x {
+	position: fixed;
+	height: 20px;
+	width: 20px;
+	right: 15px;
+	top: 15px;
+}
+
 .lightbox {
 	position: fixed;   /* Take it out of the flow of the document */
     left: 0;           /* Left edge at left for now */
