--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,27 @@
 body {
 	background-image: url("../assets/background2.png");
-	font-family: "Lato";
-	font-weight: 300;
+	font-family: 'Lato', sans-serif;
+	font-size: 16.2px;
 	color: #333333;
 	margin: 0px;
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
-@font-face {
-  font-family: "Lato";
-  font-style: normal;
-  font-weight: 300;
-  src: local("Lato Light"), local("Lato-Light"), url("http://fonts.gstatic.com/s/lato/v11/KT3KS9Aol4WfR6Vas8kNcg.woff") format("woff");
-}
-
 a {
 	text-decoration: none;
 	color: black;
-	font-weight: 100;
+	font-weight: 400;
 }
 
 a:hover, a:active {
 	color: #e1005f;
 	/*color: #bd0143; pink */
+}
+
+a, a:link, a:visited, .clickable {
+	outline: none;
+	border: none;
+	text-decoration: none;
 }
 
 h3 {
@@ -94,17 +93,17 @@ h3 {
 }
 
 .project-details h2 {
-	font-weight: 100;
-	font-size: 30px;
+	font-weight: 400;
+	font-size: 35px;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	display: inline-block
+	display: inline-block;
 }
 
 .project-details h4 {
 	display: inline-block;
-	font-size: 20px;
-	font-weight: 100;
+	font-size: 25px;
+	font-weight: 400;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
@@ -183,11 +182,6 @@ h3 {
 	display: inline-block;
 }
 
-.names {
-	font-weight: 350;
-	color: #000000;
-}
-
 .project-dscrp p {
 	margin-top: 0px;
 }
@@ -206,13 +200,13 @@ h3 {
 
 #icons {
 	display: inline-block;
-	width: 90px;
+	width: 132px;
 	position: fixed;
 	z-index: 2;
 	margin-top: 550px;
 	opacity: 0.2;
 	height: 60px;
-	margin-left: 150px;
+	margin-left: 108px;
 }
 
 #icons a:hover {
@@ -228,6 +222,13 @@ h3 {
 
 #icon-l {
 	height: 35px;
+	vertical-align: top;
+	margin-right: 12px;
+}
+
+#icon-w {
+	height: 26px;
+	margin-top: 4px;
 	vertical-align: top;
 }
 
